--- a/templates/index.css
+++ b/templates/index.css
@@ -2,37 +2,88 @@
  file: $MAIN/templates/index.css
 
  revision history:
+  20190903 (TE): finalized design of home page
   20190830 (TE): initial version
 
- This file is the specific css stylsheet for the main page on the TechBlog
+ This file is the specific css stylsheet for the main page on the YouNews
  site. It is used to fix and customize positions of different elements of the
  page.
 ----------------------------------------------------------------------------**/
 
-/**------------------------ navbar cusomtizations --------------------------**/
+/** resolution scaling **/
+/**                    **/
+
+/** set the base font size **/
+/**                        **/
+:root, html {
+    font-size: 20px;
+}
+
+/** ensure font sizes scale **/
+/**                         **/
+p {
+    font-size: 1rem;
+}
+
+h1 {   
+    font-size: 2rem;
+}
+
+/** define content font size at different pixel values **/
+/**                                                    **/
+@media screen and (max-width: 799px){
+    #nav {flex-direction: column !important;}
+    #content {margin-top: 5rem !important;}
+    :root {font-size: 20px !important;}
+    .column-3, .column-6{flex-wrap: wrap !important;}
+    .column-3 {width: 75% !important;}
+    .row {
+	width: 80% !important;
+	height: auto !important;
+	flex-direction: column !important;
+	align-items: center;
+    }
+    .row img {
+	width: 100% !important;
+	height: auto !important;
+    }
+}
+@media screen and (min-width: 800px){
+    :root {font-size: calc((800/1200) * 1rem) !important;}
+}
+@media screen and (min-width: 1000px){
+    :root {font-size: calc((1000/1200) * 1rem) !important;}
+}
+@media screen and (min-width: 1200px){
+    :root {font-size: calc((1200/1200) * 1rem) !important;}
+}
+@media screen and (min-width: 1400px){
+    :root {font-size: calc((1400/1200) * 1rem) !important;}
+}
+@media screen and (min-width: 1600px){
+    :root {font-size: calc((1600/1200) * 1rem) !important;}
+}
+
+
+/**--------------------------- nav cusomtizations --------------------------**/
 /**                                                                         **/
 /** set global variables **/
 /**                      **/
 :root {
-    --grapefruit: #F26968;
-    --moss: #323339;
-    --verde: #6CBF84;
-    --limestone: #DFE2D2;
-    --rosa: #F2AD9f;
-    --top-gradient: #C31432;
-    --bottom-gradient: #240b36;
+    --lpink: #FE6373;
+    --bggrey: #F7F7F7;
+    --greyborder: #ABB2B9;
 }
 
 
+/** define page margin, padding, font **/
+/**                                   **/
 html, body {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
-}
-
-body {
-    min-height: 100%;
-    background: linear-gradient(to bottom, #e6e9f0 0%, #eef1f5 100%) fixed;
+    overflow-x: hidden;
+    font-family: 'Roboto', sans-serif;
+    background: var(--bggrey);
 }
 
 /** remove underline from all links under header **/
@@ -44,49 +95,171 @@ header a {
 /** set the header adjustments **/
 /**                            **/
 header {
+    height: auto;
+    min-height: 3rem;
     width: 100%;
-    background-color: transparent;
+    background: white;
     position: fixed;
     top: 0;
 }
 
-/** title at the left of navbar **/
+/** all links under header are white **/
+/**                                  **/
+header a {
+    color: black;
+}
+
+/** title at the left of nav **/
 /**                             **/
-.nav-title {
+#title {
     font-style: bold;
     margin-left: 20px;
     font-size: 30px;
 }
 
-header a {
-    color: black;
+/** on hover, they are green **/
+/**                          **/
+header a:hover, .active {
+    color: var(--lpink);
 }
 
-header a:hover {
-    color: var(--grapefruit);
-}
-
-/** links at the right of the navbar **/
+/** links at the right of the nav **/
 /**                                  **/
 .nav-links a {
+    display: flex;
+    flex-direction: row;
     list-style: none;
     margin-right: 20px;
-    font-size: 20px;
+    font-size: 16px;
 }
-p {
-    margin-top: 80px;
-    padding: 40px;
-}
+
+/** add some padding and ensure they are inline blocks **/
+/**                                                    **/
 .nav-item {
     display: inline-block;
     padding-left: 8px;
     padding-right: 8px;
 }
 
-/** set the navbar as a flex container **/
+/** set the nav as a flex container **/
 /**                                    **/
-#navbar {
+#nav {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid var(--greyborder);
+    font-family: 'Lato', sans-serif;
 }
+
+/** define the footer customizations **/
+/**                                  **/
+#footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: 100vw !important;
+}
+#footer p{
+    font-family: 'Lato', sans-serif;
+}
+
+/**------------------------ general cusomtizations -------------------------**/
+/**                                                                         **/
+
+/** the entire body is a flex item **/
+/**                                **/
+body {
+    display: flex;
+    justify-content: center;
+}
+
+/** define the container **/
+/**                      **/
+#content {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;    
+}
+
+/** define a row **/
+/**              **/
+.row {    
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 70rem;
+    background: white;
+    border: 1px solid var(--greyborder);
+    border-radius: 5px;
+    height: 20rem;
+    margin-top: 40px;
+}
+
+/** all images in a row are 15x15 rem **/
+/**                                   **/
+.row img {
+    width: 15rem;
+    height: 15rem;
+}
+
+/** define the columns **/
+/**                    **/
+.column-3 {
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    width: 25%;
+    height: 100%;
+    justify-content: center;
+    flex-shrink: 0;
+}
+.column-6 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 3;
+    width: 75%;
+    height: 100%;
+    flex-shrink: 0;
+}
+
+/** create the read more button **/
+/**                             **/
+span {
+    width: 7.5rem;
+    height: 1.5rem;
+}
+.read-more {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--lpink);
+    text-decoration: none;
+    color: white;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+.read-more a {
+    text-decoration: none;
+    color: white;
+}
+.read-more:hover {
+    color: var(--lpink) !important;
+    background: white;
+    border: 1px solid var(--greyborder);
+}
+.read-more:hover a {
+    color: var(--lpink);
+}
+
+
