--- a/templates/index.css
+++ b/templates/index.css
@@ -23,6 +23,7 @@
 /**                         **/
 p {
     font-size: 1rem;
+    line-height: 1.5rem;
 }
 
 h1 {   
@@ -115,6 +116,7 @@ header a {
     font-style: bold;
     margin-left: 20px;
     font-size: 30px;
+    float: left;
 }
 
 /** on hover, they are green **/
@@ -229,6 +231,7 @@ body {
     width: 75%;
     height: 100%;
     flex-shrink: 0;
+    margin-right: 20px;
 }
 
 /** create the read more button **/
