--- a/templates/index.css
+++ b/templates/index.css
@@ -238,10 +238,12 @@ body {
 /**                             **/
 span {
     width: 7.5rem;
-    height: 1.5rem;
+    height: auto;
+
 }
 .read-more {
-    padding: 0.5rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -249,7 +251,6 @@ span {
     background-color: var(--lpink);
     text-decoration: none;
     color: white;
-    margin-top: 30px;
     margin-bottom: 10px;
 }
 .read-more a {
@@ -257,6 +258,7 @@ span {
     color: white;
 }
 .read-more:hover {
+
     color: var(--lpink) !important;
     background: white;
     border: 1px solid var(--greyborder);
